--- a/p8105_hw3_xy2396.md
+++ b/p8105_hw3_xy2396.md
@@ -12,9 +12,13 @@ data("instacart")
 ```
 
 The data ‘instacart’ contains 1384617 observations and 15 variables.
-There are four character vairables: ‘eval\_set’, ‘product\_name’,
-‘aisle’, and ‘department’; and the other variables are all integer,
-such as ‘order\_id’, ‘order\_number’, ‘order\_dow’. Here listed few
+
+There are four character vairables: ‘eval\_set’(which evaluation set
+this order belongs in), ‘product\_name’(name of product), ‘aisle’(name
+of aisle), and ‘department’(name of department); All the other variables
+are integer, such as ‘order\_id’(order identifier), ‘order\_dow’(day of
+the week on which the order was placed), and ‘order\_hour\_of\_day’(the
+hour of the day on which the order was placed). Here listed few
 observations as
 example:
 
@@ -41,6 +45,10 @@ head(aisle, n = 1) %>% knitr::kable(align = 'l')
 There are 134 aisles, and most items are ordered from aisle number 83
 “fresh vegetables”.
 
+<br>
+
+Plot of the number of items ordered in each aisle
+
 ``` r
 aisle %>% filter(n > 10000) %>% arrange(desc(n)) %>% 
   ggplot(aes(x = aisle, y = n)) +
@@ -54,9 +62,9 @@ aisle %>% filter(n > 10000) %>% arrange(desc(n)) %>%
 
 ![](p8105_hw3_xy2396_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
-Among the aisle “baking ingredients”, “dog food care”, and “packaged
-vegetables fruits”, the three most popular and their times of being
-ordered are shown in table below:
+<br> Among the aisle “baking ingredients”, “dog food care”, and
+“packaged vegetables fruits”, the three most popular and their times
+of being ordered are shown in table below:
 
 ``` r
 popular_item =
@@ -80,6 +88,8 @@ popular_item %>% knitr::kable(align = 'l')
 | packaged vegetables fruits | Organic Baby Spinach                          | 9784         |
 | packaged vegetables fruits | Organic Raspberries                           | 5546         |
 | packaged vegetables fruits | Organic Blueberries                           | 4966         |
+
+<br>
 
 The mean hour of the day at which “Pink Lady Apples” and “Coffee Ice
 Cream” are ordered on each day of the week are shown below:
@@ -190,7 +200,7 @@ average %>%
 ![](p8105_hw3_xy2396_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
 Two-panel plot showing distribution of data\_value for responses (“Poor”
-to “Excellent”) among locations in NY State for the years 2006 and 2010,
+to “Excellent”) among locations in NY State for the years 2006 and 2010
 :
 
 ``` r
@@ -213,3 +223,69 @@ value in each response group did not change much except the small
 elevation in the ‘very good’ group.
 
 ## Problem 3
+
+Read in and clean dataset
+
+``` r
+accel =
+  read_csv("./dataset/accel_data.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    workday = case_when(day %in% c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday") ~ "weekday",
+                               day %in% c("Saturday", "Sunday") ~ "weekend"),
+    day = as.factor(day), 
+    day = fct_relevel(day, c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"))) %>% 
+  select(week, day_id, workday, day, everything()) 
+```
+
+The ‘accel’ dataset contains 35 observations and 1444 variables. The
+variable “week”, “day”, and “workday” indicate the week, the day of the
+week, and whether it was a weekday or weekend of each observed day; and
+the variables “activity\_n” contain the activity counts for each minute
+of a 24-hour day.
+
+``` r
+#Compute the sum of activities of each day
+accel_sum =
+  accel %>% 
+  mutate(sum_day = rowSums(.[5:1444])) %>% 
+  select(week, day_id, workday, day, sum_day) %>% 
+  group_by(week) 
+
+#Line chart of activities of each day across weeks
+accel_sum %>%
+  ggplot(aes(x = day, y = sum_day, color = week)) +
+  geom_point() +
+  geom_line(aes(group = week)) +
+  labs(x = "Day of Week", y = "Daily Activity Sum")
+```
+
+![](p8105_hw3_xy2396_files/figure-gfm/unnamed-chunk-13-1.png)<!-- --> We
+can see from the resulting graph that, during the first three weeks, the
+daily total activity was roughly increacing from Monday to Sunday; but
+in the 4th and 5th week, the total activity increased a bit during
+weekdays then dopped dramatically on Saturday.
+
+``` r
+#Compute the hourly activity for each day
+hour_act = sapply(seq(5,1444,by = 60),function(i) rowSums(accel[,i:(i + 59)]))
+sum_hour = cbind(accel, hour_act) %>% select(-starts_with("activity")) %>% 
+  pivot_longer('1':'24', names_to = "hour", values_to = "activity" ) %>% 
+  mutate(hour = as.numeric(hour)) %>% 
+  arrange(day_id, hour)
+
+#Plot the 24-hour activity time courses for each day
+sum_hour %>% 
+  ggplot(aes(x = hour, y = activity, color = day)) +
+  geom_line(aes(group = day_id)) +
+  scale_x_continuous(
+    breaks = seq(1, 24, by = 1), 
+    limits = c(1, 24)) +
+  labs(x = "Hour of Day", y = "Hourly Activity")
+```
+
+![](p8105_hw3_xy2396_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+
+From the resulting graph we can see that the activities fluctuated most
+at mid-day of Sundays, and at night of Fridays; and there were some
+fluctuation on Wednesday, Saturday, and Monday.
