--- a/p8105_hw3_xy2396.md
+++ b/p8105_hw3_xy2396.md
@@ -1,5 +1,6 @@
 Homework 3
 ================
+Xinyu Yang
 
 ## Problem 1
 
@@ -27,6 +28,8 @@ example:
 |         1 |       49302 |                    1 |         1 |   112108 | train     |             4 |          4 |                   10 |                         9 | Bulgarian Yogurt                              |       120 |             16 | yogurt               | dairy eggs |
 |         1 |       11109 |                    2 |         1 |   112108 | train     |             4 |          4 |                   10 |                         9 | Organic 4% Milk Fat Whole Milk Cottage Cheese |       108 |             16 | other creams cheeses | dairy eggs |
 |         1 |       10246 |                    3 |         0 |   112108 | train     |             4 |          4 |                   10 |                         9 | Organic Celery Hearts                         |        83 |              4 | fresh vegetables     | produce    |
+
+<br>
 
 ``` r
 aisle = 
@@ -218,6 +221,7 @@ ny_value %>%
 ```
 
 ![](p8105_hw3_xy2396_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+
 Comparing the plots for 2006 and 2010, we can see that the median data
 value in each response group did not change much except the small
 elevation in the ‘very good’ group.
@@ -260,10 +264,11 @@ accel_sum %>%
   labs(x = "Day of Week", y = "Daily Activity Sum")
 ```
 
-![](p8105_hw3_xy2396_files/figure-gfm/unnamed-chunk-13-1.png)<!-- --> We
-can see from the resulting graph that, during the first three weeks, the
-daily total activity was roughly increacing from Monday to Sunday; but
-in the 4th and 5th week, the total activity increased a bit during
+![](p8105_hw3_xy2396_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+We can see from the resulting graph that, during the first three weeks,
+the daily total activity was roughly increacing from Monday to Sunday;
+but in the 4th and 5th week, the total activity increased a bit during
 weekdays then dopped dramatically on Saturday.
 
 ``` r
